package dat.startcode.model.entities;

import dat.startcode.model.services.SVG;

import javax.servlet.http.HttpServletRequest;
import javax.servlet.http.HttpServletResponse;
import javax.servlet.http.HttpSession;

public class SVGDrawing {

    CarportRequest carportRequest = null;

    public SVGDrawing(CarportRequest newCarportRequest) {
        this.carportRequest = newCarportRequest;
    }

    public SVG draw() {

        CarportCalculator carportCalculator = new CarportCalculator();


        /*Carport*/
        SVG carportSVG = new SVG(75, 10, "0 0 855 690", 500, 500);

        carportSVG.addLine(carportRequest.getLength() + 50, 0, carportRequest.getLength() + 50, carportRequest.getWidth());
        carportSVG.addLine(carportRequest.getLength() + 40, 0, carportRequest.getLength() + 60, 0);
        carportSVG.addLine(carportRequest.getLength() + 40, carportRequest.getWidth(), carportRequest.getLength() + 60, carportRequest.getWidth());

        carportSVG.addLine(0, carportRequest.getWidth() + 50, carportRequest.getLength(), carportRequest.getWidth() + 50);
        carportSVG.addLine(0, carportRequest.getWidth() + 40, 0, carportRequest.getWidth() + 60);
        carportSVG.addLine(carportRequest.getLength(), carportRequest.getWidth() + 40, carportRequest.getLength(), carportRequest.getWidth() + 60);

        carportSVG.addLine(0, carportRequest.getWidth() + 20, carportRequest.getLength(), carportRequest.getWidth() + 20);
        carportSVG.addLine(0, carportRequest.getWidth() + 30, 0, carportRequest.getWidth() + 10);
        carportSVG.addLine(carportRequest.getLength(), carportRequest.getWidth() + 30, carportRequest.getLength(), carportRequest.getWidth() + 10);


        /*Spær*/
        for (int x = 0; x < carportCalculator.calculateRafters(carportRequest.getLength()); x++) {
            carportSVG.addRect((int) (0 + carportCalculator.calculateRaftersDistance(carportRequest.getLength(), carportCalculator.calculateRafters(carportRequest.getLength())) * x), 0, carportRequest.getWidth(), 4.5f);

        }
        /*Top rem*/
        carportSVG.addLine(0, 0, carportRequest.getLength(), 0);

        /*Bund rem*/
        carportSVG.addLine(0, carportRequest.getWidth(), carportRequest.getLength(), carportRequest.getWidth());

        /*Hulbånd*/
        carportSVG.addLineWithDash(55, 0, carportCalculator.calculatePerforatedTapeLength(carportRequest.getLength()), carportRequest.getWidth());
        carportSVG.addLineWithDash(carportCalculator.calculatePerforatedTapeLength(carportRequest.getLength()), 0, 55, carportRequest.getWidth());

        /*Stolper fast*/
        carportSVG.addRect(45, 0, 15, 15);
        carportSVG.addRect(45, carportRequest.getWidth() - 15, 15, 15);
        carportSVG.addRect(carportRequest.getLength() - 45, 0, 15, 15);
        carportSVG.addRect(carportRequest.getLength() - 45, carportRequest.getWidth() - 15, 15, 15);

        /*Midter stolper*/
        if (carportCalculator.calculatePostAmountNeeded(carportRequest.getLength()) == 3) {
            carportSVG.addRect(45 + carportCalculator.calculateXDistance(carportRequest.getLength()), 0, 15, 15);
            carportSVG.addRect(45 + carportCalculator.calculateXDistance(carportRequest.getLength()), carportRequest.getWidth() - 15, 15, 15);
        } else if (carportCalculator.calculatePostAmountNeeded(carportRequest.getLength()) == 4) {
            carportSVG.addRect(45 + carportCalculator.calculateXDistance(carportRequest.getLength()), 0, 15, 15);
            carportSVG.addRect(45 + carportCalculator.calculateXDistance(carportRequest.getLength()) + carportCalculator.calculatePostDistance(carportRequest.getLength()), 0, 15, 15);
            carportSVG.addRect(45 + carportCalculator.calculateXDistance(carportRequest.getLength()), carportRequest.getWidth() - 15, 15, 15);
            carportSVG.addRect(45 + carportCalculator.calculateXDistance(carportRequest.getLength()) + carportCalculator.calculatePostDistance(carportRequest.getLength()), carportRequest.getWidth() - 15, 15, 15);
        }


        return carportSVG;
    }

    public SVG drawWithShed() {
        CarportCalculator carportCalculator = new CarportCalculator();

        SVG svg = new SVG(75, 10, "0 0 855 690", 500, 500);


        svg.addLine(carportRequest.getLength() + 50, 0, carportRequest.getLength() + 50, carportRequest.getWidth());
        svg.addLine(carportRequest.getLength() + 40, 0, carportRequest.getLength() + 60, 0);
        svg.addLine(carportRequest.getLength() + 40, carportRequest.getWidth(), carportRequest.getLength() + 60, carportRequest.getWidth());

        svg.addLine(0, carportRequest.getWidth() + 80, carportRequest.getLength(), carportRequest.getWidth() + 80);
        svg.addLine(0, carportRequest.getWidth() + 70, 0, carportRequest.getWidth() + 90);
        svg.addLine(carportRequest.getLength(), carportRequest.getWidth() + 70, carportRequest.getLength(), carportRequest.getWidth() + 90);

        svg.addLine(0, carportRequest.getWidth() + 50, carportRequest.getLength(), carportRequest.getWidth() + 50);
        svg.addLine(0, carportRequest.getWidth() + 60, 0, carportRequest.getWidth() + 40);
        svg.addLine(carportRequest.getLength(), carportRequest.getWidth() + 60, carportRequest.getLength(), carportRequest.getWidth() + 40);

        svg.addLine(carportRequest.getLength(), carportRequest.getWidth() + 20, carportRequest.getShedLength(), carportRequest.getWidth() + 20);
        svg.addLine(carportRequest.getLength(),carportRequest.getWidth()+10,carportRequest.getLength(),carportRequest.getWidth()+20);





        for (int x = 0; x < carportCalculator.calculateRafters(carportRequest.getLength()); x++) {
            svg.addRect((int) (0 + carportCalculator.calculateRaftersDistance(carportRequest.getLength(), carportCalculator.calculateRafters(carportRequest.getLength())) * x), 0, carportRequest.getWidth(), 4.5f);

        }
        /*Top rem*/
        svg.addLine(0, 0, carportRequest.getLength(), 0);

        /*Bund rem*/
        svg.addLine(0, carportRequest.getWidth(), carportRequest.getLength(), carportRequest.getWidth());

        /*Hulbånd*/
        svg.addLineWithDash(55, 0, carportCalculator.calculatePerforatedTapeLength(carportRequest.getLength()) - carportRequest.getShedLength() + 50, carportRequest.getWidth());
        svg.addLineWithDash(carportCalculator.calculatePerforatedTapeLength(carportRequest.getLength()) - carportRequest.getShedLength() + 50, 0, 55, carportRequest.getWidth());

        /*Stolper fast*/
        svg.addRect(45, 0, 15, 15);
        svg.addRect(45, carportRequest.getWidth() - 15, 15, 15);
        svg.addRect(carportRequest.getLength() - 45, 0, 15, 15);
        svg.addRect(carportRequest.getLength() - 45, carportRequest.getWidth() - 15, 15, 15);

        /*Skur væg*/
        int shedStart = carportRequest.getLength() - carportRequest.getShedLength();
        svg.addLine(shedStart, 0, shedStart, carportRequest.getWidth());

        /*Stolper på skur / midten*/
        int yPosShed = carportRequest.getWidth() / 2;
        svg.addRect(shedStart, yPosShed, 15, 15);

        int xPosShed = carportRequest.getLength() - 10;
        svg.addRect(xPosShed, carportRequest.getWidth() / 2, 15, 15);

        /*Stolper på skur*/
        int xPos = carportRequest.getLength() - carportRequest.getShedLength();
        svg.addRect(xPos, 0, 15, 15);

        svg.addRect(xPos, carportRequest.getWidth() - 15, 15, 15);

        return svg;
    }


}
